src/App.css
.eduContainer,
.jobContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  column-gap: 25px;
  row-gap: 10px;
  background-color: wheat;
  width: 500px;
  padding: 10px;
  padding-bottom: 3px;
  margin-bottom: 10px;
}
.eduContainer {
  grid-auto-rows: 0;
}
.jobContainer {
  grid-template-rows: repeat(4, 1fr);
  row-gap: 0px;
}
.inputContainer {
  display: flex;
  flex-direction: column;
}
.btnWrapper {
  display: flex;
  align-items: center;
  justify-content: left;
}
#descriptionContainer {
  grid-column: 1/-1;
}
.description {
  resize: none;
  height: 50px;
}
.deleteBtn {
  width: 100px;
  height: 35px;
  padding: 0;
}
.deleteBtn:hover {
  border: none;
  cursor: pointer;
  color: white;
  font-weight: bold;
  background-color: red;
}
#schoolName {
  background-color: white;
}

